--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@
 :root {
   --text-color: #333;
   --background-color: #f5f5f5;
-  --primary-color: #007bff;
+  --primary-color: #f4931d;
   --secondary-color: #6c757d;
-  --hover-color: #0056b3;
+  --hover-color: #f05824;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
